argus-insight-thirdparties/prometheus-service/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argus-prometheus
  labels:
    app.kubernetes.io/part-of: argus-insight
