argus-insight-thirdparties/prometheus-service/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: argus-insight
  labels:
    app.kubernetes.io/part-of: argus-insight
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
          - path: /pushgateway
            pathType: Prefix
            backend:
              service:
                name: pushgateway
                port:
                  number: 9091
          - path: /alertmanager
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
